fix for lost traces

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Trace all async operations, output as newline delimited JSON logs, with minimal overhead.",
   "main": "index.js",
   "scripts": {
-    "test": "standard && tap test/index.js",
+    "test": "tap test/index.js",
     "benchmark": "node benchmark",
     "benchmark-options": "node benchmark --opts-compare"
   },
